
Added
~~~~~

- The experiment.create_resource and scan.create_resource now take two extra
  arguments: data_dir and method, which allow the uploading of the content of
  a directory as the content of the newly created resource. The method is the
  method for resource.upload_dir method

Changed
~~~~~~~

- Removed wrong default argument for create_assessor (invalid assessor type)

Fixed
~~~~~

- Fixed a small bug where an incorrect error message was giving when not giving
  a value for the secondary label during object creation.

0.3.9 - 2018-07-02
------------------

Fixed
~~~~~

- xnatpy had issues with shared subjects and sessions as the REST API would
  return the original object (with sharing information in it). Now xnatpy
  check the requested uri and makes sure the information of the correct project
  is used. Now shared objects can be used properly in xnatpy.

Added
~~~~~

- resource.upload now takes an ``extract`` parameter indicating data should be
  extracted into files after upload
- resource.upload_dir to upload an entire directory to a resource, the directory
  will be added into the resources so that e.g. directory/a.txt becomes resource/a.txt
- redirection detections, if the server has moved and is being redirected (e.g. using 
  a 302 or 301 response), xnatpy will detect that and use the new url instead.

0.3.8 - 2018-06-04
------------------

Added
~~~~~

- Methods to retrieve the DICOM header dump using the dcmdump service. This
  can be used via services.dicom_dump(uri) or experiment.dicom_dump to get the
  dump of the specific experiment

Fixed
~~~~~

- Strict username checking after login disabled to avoid problems with OIDC
- Fix a bug where token result would contain extra data

0.3.7 - 2018-03-12
------------------

Fixed
~~~~~

- Fixed a bug where the prompt for the password on Windows would not work

Changed
~~~~~~~

- Hide certificate warnings if verify=False, just give a one time warning that